--- a/biblioteka/main/templates/main/readers.html
+++ b/biblioteka/main/templates/main/readers.html
@@ -11,7 +11,8 @@
 
 {% block text%}
     <dev class="alert alert-warning mt-2">
-        В нашей библиотеке наконец-то появилась замечательная книга в золотом переплете: А.С. Пушкин "Евений Онегин".
+        В нашей библиотеке наконец-то появилась замечательная книга в золотом переплете:<br>
+        А.С. Пушкин "Евений Онегин".
     </dev>
     <img class="d-block mx-auto mb-4" src="https://dslov.ru/img1/1/7922.jpg" alt="" width="700" height="700">
 
