--- a/biblioteka/main/templates/main/readers.html
+++ b/biblioteka/main/templates/main/readers.html
@@ -5,16 +5,17 @@
 {% endblock%}
 
 {% block title2%}
-    Наши новости:
-
+    Наши новости:   <br>
 {% endblock%}
 
 {% block text%}
-    <dev class="alert alert-warning mt-2">
+    <div class="alert alert-warning mt-2">
         В нашей библиотеке наконец-то появилась замечательная книга в золотом переплете:<br>
         А.С. Пушкин "Евений Онегин".
-    </dev>
-    <img class="d-block mx-auto mb-4" src="https://dslov.ru/img1/1/7922.jpg" alt="" width="700" height="700">
+    </div>
+
+
+    <img class="d-block mx-auto mb-4" src="https://dslov.ru/img1/1/7922.jpg" alt="" width="500" height="500">
 
 
 {% endblock%}
