--- a/biblioteka/main/templates/main/base.html
+++ b/biblioteka/main/templates/main/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-warning border-bottom shadow-sm">
-      <img class="d-block mx-auto mb-4" src="https://www.vsekolledzhi.ru/data/org/files/79/chelyabinskiy-pedagogicheskiy-kolledzh-1/logo2/1/250.jpg" alt="" width="100" height="100">
+        <a href={% url '' %}><img class="d-block mx-auto mb-4" src="https://www.vsekolledzhi.ru/data/org/files/79/chelyabinskiy-pedagogicheskiy-kolledzh-1/logo2/1/250.jpg" alt="" width="100" height="100"></a>
       <h8 class="my-0 mr-md-auto font-weight-normal">Библиотека ЧПК №1</h8>
 
       <nav class="my-2 my-md-0 mr-md-3">
